Fix always showing scrollbar

--- a/src/components/PageRenderer.module.scss
+++ b/src/components/PageRenderer.module.scss
@@ -107,7 +107,7 @@
     font-size: 1.6rem;
     box-sizing: border-box;
     border-collapse: collapse;
-    overflow-x: scroll;
+    overflow-x: auto;
     white-space: nowrap;
     display: block;
     width: clamp(var(--content-page-width), 100%, var(--content-page-width-wide));
